--- a/views/success.ejs
+++ b/views/success.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
     <div class="w3-top">
       <div class="w3-bar w3-green w3-padding w3-card">
-        <a href="index.html"><img 
+        <a href="/"><img 
           src="./images/logo-white-v2.svg"
           alt="MelleWS"
           height="36"
