--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -1,6 +1,6 @@
 <div class="w3-top w3-margin-bottom">
     <div class="w3-bar w3-white w3-padding w3-card w3-margin-bottom">
-      <a href="index.html"><img 
+      <a href="/"><img 
       src="./images/logo-black-v2.svg"
       alt="MelleWS"
       height="36"
