--- a/views/info.ejs
+++ b/views/info.ejs
@@ -5,28 +5,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
-    <div class="w3-top w3-margin-bottom">
-      <div class="w3-bar w3-white w3-padding w3-card w3-margin-bottom">
-        <a href="index.html"><img 
-        src="./images/logo-black-v2.svg"
-        alt="MelleWS"
-        height="36"
-        class=""/></a>
-        <div class="w3-display-topmiddle w3-hide-small">
-          <% if (req.cookies.userCookie) { %>
-            <p>Hi, <%= req.cookies.userCookie %></p>
-          <% } %>
-        </div>
-        <div class="w3-right w3-hide-small">
-          <a href="drive" class="w3-bar-item w3-button w3-round-xxlarge">MWSDrive</a>
-          <a href="" class="w3-bar-item w3-button w3-disabled w3-round-xxlarge">FreeDB</a>
-          <a href="info" class="w3-bar-item w3-button w3-round-xxlarge">Info</a>
-          <% if (!req.cookies.userCookie) { %>
-            <a href="signup" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><b>Sign Up</b></a>
-          <% } %>
-        </div>
-      </div>
-    </div>
+    <%- include('bar', {req: req}); %>
     <br/>
     <br/>
     <br/>
