Login, cookies, autofill, bug fixes and more.

--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -15,6 +15,7 @@
         <a href="" class="w3-bar-item w3-button w3-disabled w3-round-xxlarge">Convert</a>
         <a href="info" class="w3-bar-item w3-button w3-round-xxlarge">Info</a>
         <% if (!req.cookies.userCookie) { %>
+          <a href="login" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><strong>Log in</strong></a>
           <a href="signup" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><strong>Sign Up</strong></a>
         <% } %>
       </div>
