--- a/views/success.ejs
+++ b/views/success.ejs
@@ -19,6 +19,7 @@
             <a href="" class="w3-bar-item w3-button w3-disabled w3-round-xxlarge">FreeDB</a>
             <a href="info" class="w3-bar-item w3-button w3-round-xxlarge">Info</a>
             <% if (!req.cookies.userCookie) { %>
+              <a href="login" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><strong>Log in</strong></a>
               <a href="signup" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><b>Sign Up</b></a>
             <% } %>
           </div>
