--- a/views/error.ejs
+++ b/views/error.ejs
@@ -15,8 +15,8 @@
             <% } %>
           </div>
           <div class="w3-right w3-hide-small">
-            <a href="drive" class="w3-bar-item w3-button w3-round-xxlarge">MWSDrive</a>
-            <a href="" class="w3-bar-item w3-button w3-disabled w3-round-xxlarge">FreeDB</a>
+            <a href="drive" class="w3-bar-item w3-button w3-round-xxlarge">Drive</a>
+            <a href="convert" class="w3-bar-item w3-button w3-round-xxlarge">Convert</a>
             <a href="info" class="w3-bar-item w3-button w3-round-xxlarge">Info</a>
             <% if (!req.cookies.userCookie) { %>
               <a href="login" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><strong>Log in</strong></a>
