--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -1,7 +1,7 @@
 <div class="w3-top w3-margin-bottom">
     <div class="w3-bar w3-white w3-padding w3-card w3-margin-bottom">
       <a href="/"><img 
-      src="./images/logo-black-v2.svg"
+      src="/images/logo-black-v2.svg"
       alt="MelleWS"
       height="36"
       class=""/></a>
@@ -11,8 +11,8 @@
         <% } %>
       </div>
       <div class="w3-right w3-hide-small">
-        <a href="drive" class="w3-bar-item w3-button w3-round-xxlarge">MWSDrive</a>
-        <a href="" class="w3-bar-item w3-button w3-disabled w3-round-xxlarge">Convert</a>
+        <a href="drive" class="w3-bar-item w3-button w3-round-xxlarge">Drive</a>
+        <a href="convert" class="w3-bar-item w3-button w3-round-xxlarge">Convert</a>
         <a href="info" class="w3-bar-item w3-button w3-round-xxlarge">Info</a>
         <% if (!req.cookies.userCookie) { %>
           <a href="login" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><strong>Log in</strong></a>
