--- a/views/drive.ejs
+++ b/views/drive.ejs
@@ -12,12 +12,12 @@
     <br/>
     <p class="w3-margin-left">Welcome to MWSDrive, a free storage applet with a maximum upload size of 200 MB.</p>
     <div class="w3-card w3-margin w3-margin-top" style="width: 25%">
-        <div class="w3-container w3-teal">
-          <h2>Upload</h2>
+        <div class="w3-container">
+          <h2 class="w3-text-teal">Upload</h2>
         </div>
-        <form class="w3-container w3-padding" action="upl" method="post" enctype="multipart/form-data" width=30>
+        <form class="w3-container w3-padding dropzone" action="upl" method="post" enctype="multipart/form-data" width=30>
             <input class="w3-input" type="text" name="usrID" placeholder="User ID" value="<%= req.cookies.idCookie %>">
-            <input class="w3-input" type="file" name="filetoupload" required>
+            <input class="w3-input" type="file" name="filetoupload" id="dzf" required>
             <input class="w3-button" type="submit">
         </form>
     </div>
