Tyding licensing up

--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -1,3 +1,8 @@
+<!--
+    SPDX-license_Identifier: AGPL-3.0-or-later
+    Copyright © 2020 Melle Nooijen & contributors
+-->
+
 <div class="w3-top w3-margin-bottom">
     <div class="w3-bar w3-white w3-padding w3-card w3-margin-bottom">
       <a href="/"><img 
