--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<!--
+    SPDX-license_Identifier: AGPL-3.0-or-later
+    Copyright © 2020 Melle Nooijen & contributors
+-->
+
 <html>
     <title>MelleWS (success)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
