--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+    SPDX-license_Identifier: AGPL-3.0-or-later
+    Copyright © 2020 Melle Nooijen & contributors
+-->
+
 <html>
   <head>
     <title>MelleWS</title>
