--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -1,23 +1,24 @@
-<div class="w3-top w3-margin-bottom">
-    <div class="w3-bar w3-white w3-padding w3-card w3-margin-bottom">
-      <a href="/"><img 
-      src="/images/logo-black-v2.svg"
-      alt="MelleWS"
-      height="36"
-      class=""/></a>
-      <div class="w3-display-topmiddle w3-hide-small">
-        <% if (req.cookies.userCookie) { %>
-          <p>Hi, <%= req.cookies.userCookie %></p>
-        <% } %>
-      </div>
-      <div class="w3-right w3-hide-small">
-        <a href="drive" class="w3-bar-item w3-button w3-round-xxlarge">Drive</a>
-        <a href="convert" class="w3-bar-item w3-button w3-round-xxlarge">Convert</a>
-        <a href="info" class="w3-bar-item w3-button w3-round-xxlarge">Info</a>
-        <% if (!req.cookies.userCookie) { %>
-          <a href="login" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><strong>Log in</strong></a>
-          <a href="signup" class="w3-bar-item w3-button w3-round-xxlarge w3-hover-teal"><strong>Sign Up</strong></a>
-        <% } %>
-      </div>
-    </div>
-  </div>
+<link rel="stylesheet" href="/stylesheets/bar.css"/>
+<% if(typeof(barCol) === "undefined"){ var barCol = "180,180,180.black" } %>
+<ul class="w3-display-topmiddle menu-bar" style="background-color: rgba(<%= barCol.split(".")[0]%>,.4); color: <%= barCol.split(".")[1] %>;">
+  <a href="/"><li class="li-icon"><img 
+    src="/images/logo-<%= barCol.split(".")[1] %>-v2.svg"
+    alt="MelleWS"
+    height="36"
+    class=""/></li></a>
+  <% if (req.cookies.userCookie) { %>
+    <li>Hi, <%= req.cookies.userCookie %></li>
+  <% } %>
+  <div class="vl"></div>
+  <a href="/drive" class="baritem"><li class="li-item">Drive</li></a>
+  <a href="/convert" class="baritem"><li class="li-item">Convert</li></a>
+  <a href="/pubdir/" class="baritem"><li class="li-item">Files</li></a>
+  <% if (!req.cookies.userCookie) { %>
+    <div class="vl"></div>
+    <a href="/login" class="baritem"><li class="li-item li-special">Log in</li></a>
+    <a href="/signup" class="baritem"><li class="li-item li-special">Sign up</li></a>
+  <% } else {%>
+    <div class="vl"></div>
+    <a href="/forget" class="baritem"><li class="li-item li-special-red">Log out</li></a>
+  <% } %>
+</ul>
