--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,32 +42,24 @@
         <hr class="w3-border-grey" style="margin:auto;width:50%">
         <p class="homefont w3-large w3-center"><b>Welcome to MelleWS,<br/></b>a fast and reliable web platform.</p>
       </div>
+      <div class="w3-bar w3-teal w3-display-bottommiddle">
+        <p class="w3-bar-item" style="text-align: center">MelleWS is currently in beta (0.8b1). Therefore, you might experience issues. If so, please let us know by opening an issue on the <a href="https://www.github.com/MelleNooijen/MelleWS/">MelleWS repository.</a></p>
+      </div>
       <div class="homefont w3-display-bottomleft w3-padding-large w3-text-black">
         <a id="myBtn" class="baritem" href="#">©</a> Melle Nooijen
       </div>
       <a href="https://www.github.com/MelleNooijen/MelleWS" class="w3-display-bottomright w3-margin"><i class="fab fa-github fa-2x" style="color:rgba(216, 216, 216, 0.5); backdrop-filter: blur(10px);"></i></a>
     </div>
     <script>
-      // Get the modal
 var modal = document.getElementById("myModal");
-
-// Get the button that opens the modal
 var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks on the button, open the modal
 btn.onclick = function() {
   modal.style.display = "block";
 }
-
-// When the user clicks on <span> (x), close the modal
 span.onclick = function() {
   modal.style.display = "none";
 }
-
-// When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
   if (event.target == modal) {
     modal.style.display = "none";
