--- a/public/stylesheets/bar.css
+++ b/public/stylesheets/bar.css
@@ -11,9 +11,12 @@
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     align-items: center;
+    margin:10px 0 0 0;
     padding: 0 10px;
-    margin: -30px 0 0 0;
     transition: 0.5s;
+}
+.dmb {
+    margin: -30px 0 0 0;
     animation: showanim 1s;
 }
 .menu-bar li {
@@ -52,7 +55,7 @@
     box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.5);
     transform: scale(1.2);
 }
-.menu-bar:hover {
+.dmb:hover {
     margin:10px 0 0 0;
 }
 .menu-bar li.li-special:hover::before {
