--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -11,16 +11,18 @@
     <br/>
     <br/>
     <div class="w3-container w3-center">
-      <% if (req.cookies.userCookie) { %>
+      <% if (req.isAuthenticated()) { %>
         <p>You already have an account.</p>
       <% } else { %>
-        <h1>Create a user</h1>
-        <p>This will create a User ID which will appear when registered.</br>With your User ID, you can access your Drive and Database.</p>
+        <h1>Register</h1>
+        <p>Welcome to MelleWS. Here, you can register your account..</br>With your account, you can access your Drive, UserPages and more.</p>
         <div class="w3-bar">
-          <form class="w3-container w3-padding" action="/createuid" method="POST">
-              <input class="w3-input" type="text" name="usnm" placeholder="Username" required>
-              <input class="w3-input" type="email" name="mailad" placeholder="E-mail" required>
-              <input class="w3-button w3-teal w3-margin-top" type="submit" name="sbmt">
+          <form class="w3-container w3-padding" action="/register" method="POST">
+            <input class="w3-input" type="text" name="username" id="username" placeholder="Username" required>
+            <input class="w3-input" type="email" name="email" id="email" placeholder="E-mail" required>
+            <input class="w3-input" type="password" id="password" name="password" placeholder="Password" required />
+            <input class="w3-input" type="password" id="rePassword" name="rePassword" placeholder="Re-enter password" required />
+            <input class="w3-button w3-teal w3-margin-top" type="submit" name="sbmt">
           </form>
         </div>
       <% } %>
