--- a/views/dlview.ejs
+++ b/views/dlview.ejs
@@ -18,7 +18,7 @@
     <br/>
     <div class="w3-container w3-center">
         <h1>Download File</h1>
-        <p>Filename: <%= flobj.name %></p>
+        <p>Filename: <%= decodeURIComponent(flobj.name) %></p>
         <p>Uploader: <%= flobj.usrnm %></p>
         <p>Type: <%= flobj.type.split('/')[0] %> (<%= flobj.type.split('/')[1] %>)</p>
         <p>Size: <%= tempFlSz %> MB</p>
@@ -28,10 +28,10 @@
           <% } else if(req.session.user.username != flobj.usrnm) { %>
             <a class="w3-button w3-teal w3-disabled" href="#">Unauthorised.</a>
           <% } else { %>
-            <a class="w3-button w3-teal" href="/user/<%= flobj.usrnm %>/<%= flobj.name %>" download="">Download (private)</a>
+            <a class="w3-button w3-teal" href="/user/<%= flobj.usrnm %>/<%= encodeURIComponent(flobj.name) %>" download="">Download (private)</a>
           <% } %>
         <% } else { %>
-          <a class="w3-button w3-teal" href="/direct/<%= flobj.name %>" download="">Download</a>
+          <a class="w3-button w3-teal" href="/direct/<%= encodeURIComponent(flobj.name) %>" download="<%= decodeURIComponent(flobj.name) %>">Download</a>
         <% } %>
     </div>
     </body>
