--- a/views/success.ejs
+++ b/views/success.ejs
@@ -18,10 +18,30 @@
       <% } %>
     </div>
     <script>
-      function copyTC(x) {
-        var dummyContent = x;
-        var dummy = $('<input>').val(dummyContent).appendTo('body').select()
-        document.execCommand('copy')
+      function copyTC(text) {
+        var textArea = document.createElement("textarea");
+        textArea.style.position = 'fixed';
+        textArea.style.top = 0;
+        textArea.style.left = 0;
+        textArea.style.width = '2em';
+        textArea.style.height = '2em';
+        textArea.style.padding = 0;
+        textArea.style.border = 'none';
+        textArea.style.outline = 'none';
+        textArea.style.boxShadow = 'none';
+        textArea.style.background = 'transparent';
+        textArea.value = text;
+        document.body.appendChild(textArea);
+        textArea.focus();
+        textArea.select();
+        try {
+          var successful = document.execCommand('copy');
+          var msg = successful ? 'successful' : 'unsuccessful';
+          console.log('Copied to clipboard and function returned ' + msg);
+        } catch (err) {
+          console.log('Unable to copy, your browser likely does not support document.execCommand("copy").');
+        }
+        document.body.removeChild(textArea);
       }
     </script>
 </html>
